Added sharing and sharing platform, sharedsecretfiles are stored on server until accept or refuse from destiny user

--- a/sirs_main/templates/sirs_main/homepage.html
+++ b/sirs_main/templates/sirs_main/homepage.html
@@ -5,6 +5,10 @@
 <br />
 <a href="{{webpath}}files/main/"> See my files </a>
 <br />
+<a href="{{webpath}}files/share/"> See sharing center </a>
+<br />
+<a href="{{webpath}}files/upload/"> Upload a file</a>
+<br />
 <a href="{{webpath}}users/logout/"> Logout </a>
 <br />
 {% endblock %}
