--- a/sirs_users/templates/sirs_users/login.html
+++ b/sirs_users/templates/sirs_users/login.html
@@ -6,4 +6,6 @@
 	{{ login_form.as_p }}
 	<input type="submit" value="Login">
 </form>
+<br />Don't have a login? Signup 
+<a href="{{webpath}}users/register/">here!</a>
 {% endblock %}
